--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 before_script:
   - curl -L -O https://github.com/downloads/mozilla/rhino/rhino1_7R4.zip
   - unzip rhino1_7R4.zip
-  - mv rhino1_7R4/js.jar .
+  - mv rhino1_7R4/js.jar ~/builds/
   - rm rhino1_7R4.zip
   - rm -rf rhino1_7R4
   - bundle install --path ~/builds/vendor/bundle
