cd to checkout path

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: java
 before_script:
   - curl -L -O https://github.com/downloads/mozilla/rhino/rhino1_7R4.zip
   - unzip rhino1_7R4.zip
-  - mv rhino1_7R4/js.jar ~/builds/
+  - mv rhino1_7R4/js.jar ~/
   - rm rhino1_7R4.zip
   - rm -rf rhino1_7R4
-  - bundle install --path ~/builds/vendor/bundle
-script: cd ~/builds && java -jar js.jar -require -f spec/runner.js
+  - cd ~/builds/joeyates/jasmine-rhino-reporters && bundle install --path vendor/bundle
+script: cd ~/builds/joeyates/jasmine-rhino-reporters && java -jar ~/js.jar -require -f spec/runner.js
 
