--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script:
   - mv rhino1_7R4/js.jar ~/
   - rm rhino1_7R4.zip
   - rm -rf rhino1_7R4
-  - bundle install --path ~/builds/joeyates/jasmine-rhino-reporters/vendor/bundle
+  - cd ~/builds/joeyates/jasmine-rhino-reporters && bundle install --path ~/builds/joeyates/jasmine-rhino-reporters/vendor/bundle
   - ls ~/builds/joeyates/jasmine-rhino-reporters/vendor
 script: cd ~/builds/joeyates/jasmine-rhino-reporters && java -jar ~/js.jar -require -f spec/runner.js
 
